--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       run: cd functions
 
     - name: Install Dependencies
-      run: npm ci
+      run: npm install
 
     - name: Deploy to Firebase
       uses: w9jds/firebase-action@master
