--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,15 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v2
+
+    - name: Go back to root directory
+      run: cd ..
     
     - name: Go to functions directory
       run: cd functions
 
     - name: Install Dependencies
-      run: npm install
+      run: npm ci
 
     - name: Deploy to Firebase
       uses: w9jds/firebase-action@master
