--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,20 +13,10 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v2
 
-    - name: Go back to root directory
-      run: cd ..
-
-    - name: Print current directory
-      run: pwd
-    
-    - name: Go to functions directory
-      run: cd functions
-
-    - name: Print current directory (inside functions)
-      run: pwd
-
     - name: Install Dependencies
-      run: npm ci
+      run: | 
+        cd functions
+        npm ci
 
     - name: Deploy to Firebase
       uses: w9jds/firebase-action@master
